--- a/_modules/arc/reaction.html
+++ b/_modules/arc/reaction.html
@@ -1061,7 +1061,7 @@
 
 <div class="viewcode-block" id="ARCReaction.get_element_mass"><a class="viewcode-back" href="../../api/reaction.html#arc.reaction.ARCReaction.get_element_mass">[docs]</a>    <span class="k">def</span> <span class="nf">get_element_mass</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">List</span><span class="p">[</span><span class="nb">float</span><span class="p">]:</span>
         <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Get the mass of all elements of a reaction. Uses the ato order of the reactants.</span>
+<span class="sd">        Get the mass of all elements of a reaction. Uses the atom order of the reactants.</span>
 
 <span class="sd">        Returns:</span>
 <span class="sd">            List[float]: The RMS of the normal mode displacements.</span>
@@ -1070,7 +1070,28 @@
         <span class="k">for</span> <span class="n">reactant</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">r_species</span><span class="p">:</span>
             <span class="k">for</span> <span class="n">atom</span> <span class="ow">in</span> <span class="n">reactant</span><span class="o">.</span><span class="n">mol</span><span class="o">.</span><span class="n">atoms</span><span class="p">:</span>
                 <span class="n">masses</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">get_element_mass</span><span class="p">(</span><span class="n">atom</span><span class="o">.</span><span class="n">element</span><span class="o">.</span><span class="n">symbol</span><span class="p">)[</span><span class="mi">0</span><span class="p">])</span>
-        <span class="k">return</span> <span class="n">masses</span></div></div>
+        <span class="k">return</span> <span class="n">masses</span></div>
+
+<div class="viewcode-block" id="ARCReaction.get_bonds"><a class="viewcode-back" href="../../api/reaction.html#arc.reaction.ARCReaction.get_bonds">[docs]</a>    <span class="k">def</span> <span class="nf">get_bonds</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Tuple</span><span class="p">[</span><span class="nb">list</span><span class="p">,</span> <span class="nb">list</span><span class="p">]:</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Get the connectivity of the reactants and products.</span>
+
+<span class="sd">        Returns:</span>
+<span class="sd">            Tuple[List[Tuple[int, int]]]:</span>
+<span class="sd">                A length-2 tuple is which entries represent reactants and product information, respectively.</span>
+<span class="sd">                Each entry is a list of tuples, each represents a bond and contains sorted atom indices.</span>
+<span class="sd">        &quot;&quot;&quot;</span>
+        <span class="n">r_bonds</span><span class="p">,</span> <span class="n">p_bonds</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(),</span> <span class="nb">list</span><span class="p">()</span>
+        <span class="k">for</span> <span class="n">bonds</span><span class="p">,</span> <span class="n">spc_list</span> <span class="ow">in</span> <span class="nb">zip</span><span class="p">([</span><span class="n">r_bonds</span><span class="p">,</span> <span class="n">p_bonds</span><span class="p">],</span> <span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">r_species</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">p_species</span><span class="p">]):</span>
+            <span class="n">len_atoms</span> <span class="o">=</span> <span class="mi">0</span>
+            <span class="k">for</span> <span class="n">spc</span> <span class="ow">in</span> <span class="n">spc_list</span><span class="p">:</span>
+                <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">atom_1</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">spc</span><span class="o">.</span><span class="n">mol</span><span class="o">.</span><span class="n">atoms</span><span class="p">):</span>
+                    <span class="k">for</span> <span class="n">atom2</span><span class="p">,</span> <span class="n">bond12</span> <span class="ow">in</span> <span class="n">atom_1</span><span class="o">.</span><span class="n">edges</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+                        <span class="n">bond</span> <span class="o">=</span> <span class="nb">tuple</span><span class="p">(</span><span class="nb">sorted</span><span class="p">([</span><span class="n">i</span> <span class="o">+</span> <span class="n">len_atoms</span><span class="p">,</span> <span class="n">spc</span><span class="o">.</span><span class="n">mol</span><span class="o">.</span><span class="n">atoms</span><span class="o">.</span><span class="n">index</span><span class="p">(</span><span class="n">atom2</span><span class="p">)</span> <span class="o">+</span> <span class="n">len_atoms</span><span class="p">]))</span>
+                        <span class="k">if</span> <span class="n">bond</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">bonds</span><span class="p">:</span>
+                            <span class="n">bonds</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">bond</span><span class="p">)</span>
+                <span class="n">len_atoms</span> <span class="o">+=</span> <span class="n">spc</span><span class="o">.</span><span class="n">number_of_atoms</span>
+        <span class="k">return</span> <span class="n">r_bonds</span><span class="p">,</span> <span class="n">p_bonds</span></div></div>
 
 
 <div class="viewcode-block" id="remove_dup_species"><a class="viewcode-back" href="../../api/reaction.html#arc.reaction.remove_dup_species">[docs]</a><span class="k">def</span> <span class="nf">remove_dup_species</span><span class="p">(</span><span class="n">species_list</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">ARCSpecies</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="n">List</span><span class="p">[</span><span class="n">ARCSpecies</span><span class="p">]:</span>
